@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-09-10 allenb   Extended object reader interface to support push/pop
+                    of current read state.
+                    NEW VERSION: 0.27.10
 2003-09-02 allenb   Fixed bug in XML Object reader where empty strings
                     could not be read correctly.
 2003-09-01 allenb   Added interface to ObjectReader for resetting the reader
